--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -37,14 +37,14 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textSize="16sp"
-                    android:marginTop="8dp" />
+                    android:layout_marginTop="8dp" />
 
             <TextView
                     android:id="@+id/resumen"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textSize="14sp"
-                    android:marginTop="8dp" />
+                    android:layout_marginTop="8dp" />
 
         </LinearLayout>
 
